<?xml version="1.0"?>
<package>
  <name>deadman_mux</name>
  <version>0.0.0</version>
  <description>The deadman_mux package</description>

  <maintainer email="camor14@student.sdu.dk">Carlos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>msgs</run_depend>

</package>
