<?xml version="1.0"?>
<package>
    <name>dock_with_tape</name>
    <version>0.0.0</version>
    <description>The line_follow package</description>
    <maintainer email="anje111@student.sdu.dk">student</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>mission</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>msgs</build_depend>
    <build_depend>line_detection</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>zbar_decoder</build_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>msgs</run_depend>
    <run_depend>mission</run_depend>
    <run_depend>line_detection</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
