<?xml version="1.0"?>
<package>
  <name>free_navigation</name>
  <version>0.0.0</version>
  <description>The free_navigation package</description>
  <maintainer email="anje111@student.sdu.dk">anders</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mission</build_depend>
  <build_depend>reletive_move_server</build_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>reletive_move_server</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mission</run_depend>
  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
