<?xml version="1.0"?>
<package>
  <name>frobit_description</name>
  <version>0.0.1</version>
  <description>The frobit_description package</description>
  <maintainer email="kschw10@student.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
</package>
