<package>
  <name>frobit_lego_transporter</name>
  <version>0.0.1</version>
  <description>The frobit_lego_transporter top-level package.</description>
  <maintainer email="kschw10@student.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/rsd15gr3/frobit_lego_transporter</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
