<?xml version="1.0"?>
<package>
    <name>line_follow</name>
    <version>0.0.0</version>
    <description>The line_follow package</description>
    <maintainer email="anje111@student.sdu.dk">student</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>mission</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>msgs</build_depend>
    <build_depend>line_detection</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>msgs</run_depend>
    <run_depend>mission</run_depend>
    <run_depend>line_detection</run_depend>
</package>
