<?xml version="1.0"?>
<package>
    <name>safety_speed</name>
    <version>0.0.0</version>
    <description>The safety_speed package</description>
    <maintainer email="camor14@student.sdu.dk">Carlos Moro García</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>msgs</run_depend>
</package>
